# tycho

./: .gitignore  CLAUDE.md  GEMINI.md  LICENSE  README.md  alembic.ini  clever-tickling-wreath.md  config.yaml  package-lock.json  pyproject.toml
CVs/CV_3_1___Machine_Learning/: developercv.cls  main.tex
CVs/CV_3_2___Machine_Learning_ES/: developercv.cls  main.tex
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_schedule_runs.py
plans/: 2026-01-24 Chat with Claude about building an automated job application platform.md  plan-v0.1.md  plan.md
profile/: personal.yaml  skills.yaml
profile/education/: edinburgh_msc.yaml  manchester_bsc.yaml  sek_ib.yaml
profile/experience/: acturis_analyst.yaml  edinburgh_vision.yaml  oesia_ai_engineer.yaml
profile/other/: climate_hack.yaml  genai_hackathon.yaml  public_speaking.yaml
profile/templates/: ats_resume.tex  ats_resume.tex.j2  ats_resume_es.tex.j2  developer_cv.tex.j2  developer_cv_es.tex.j2
src/tycho/: __init__.py  cli.py  config.py  db.py  models.py
src/tycho/collector/: base.py  jobspy_collector.py  normalize.py
src/tycho/cover_letter/: __init__.py  generator.py
src/tycho/cv/: docx_builder.py  latex_builder.py  module_selector.py  profile_loader.py
src/tycho/llm/: __init__.py  client.py
src/tycho/matcher/: keywords.py  scorer.py
src/tycho/scheduler/: __init__.py  scheduler.py
src/tycho/telegram/: bot.py  db_async.py  formatters.py  keyboards.py  middleware.py
src/tycho/telegram/handlers/: __init__.py  detail.py  generate.py  jobs.py  schedule.py  start.py
src/tycho/web/: __init__.py  app.py  deps.py
src/tycho/web/routes/: __init__.py  generate.py  jobs.py  schedule.py
src/tycho/web/static/css/: style.css
src/tycho/web/static/js/: app.js
src/tycho/web/templates/: base.html
src/tycho/web/templates/generate/: _preview_panel.html  preview.html
src/tycho/web/templates/jobs/: _row.html  _table.html  detail.html  list.html
tests/: conftest.py  test_config.py  test_cover_letter.py  test_db.py  test_docx_builder.py  test_keywords.py  test_latex_builder.py  test_llm_client.py  test_models.py  test_module_selector.py  test_normalize.py  test_profile_loader.py  test_scheduler.py  test_scorer.py
tests/test_telegram/: conftest.py  test_bot.py  test_config.py  test_db_async.py  test_formatters.py  test_handlers_detail.py  test_handlers_generate.py  test_handlers_jobs.py  test_handlers_schedule.py  test_handlers_start.py  test_keyboards.py  test_middleware.py  test_registration.py
tests/test_web/: conftest.py  test_generate_routes.py  test_jobs_routes.py  test_schedule_routes.py
(+2 files in other folders)
