[project]
name = "tycho"
version = "0.1.0"
description = "Automated job application platform with tailored CV generation"
requires-python = ">=3.11"
dependencies = [
    "python-jobspy>=1.1.75",
    "sqlalchemy>=2.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "typer>=0.12",
    "rich>=13.0",
    "jinja2>=3.1",
    "pyyaml>=6.0",
]

[project.scripts]
tycho = "tycho.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tycho"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
