[project]
name = "tycho"
version = "0.2.0"
description = "Automated job application platform with tailored CV generation"
requires-python = ">=3.11"
dependencies = [
    "python-jobspy>=1.1.75",
    "sqlalchemy>=2.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "typer>=0.12",
    "rich>=13.0",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "langchain-core>=0.3",
    "python-docx>=1.1",
]

[project.optional-dependencies]
anthropic = ["langchain-anthropic>=0.3"]
openai = ["langchain-openai>=0.3"]
ollama = ["langchain-ollama>=0.3"]
all-llm = ["langchain-anthropic>=0.3", "langchain-openai>=0.3", "langchain-ollama>=0.3"]
web = ["fastapi>=0.115", "uvicorn[standard]>=0.34", "jinja2>=3.1", "python-multipart>=0.0.9", "apscheduler>=3.10,<4", "alembic>=1.14"]

[project.scripts]
tycho = "tycho.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tycho"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
